--- a/redwoodblog/web/package.json
+++ b/redwoodblog/web/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth": "3.0.0",
     "@redwoodjs/forms": "3.0.0",
     "@redwoodjs/router": "3.0.0",
     "@redwoodjs/web": "3.0.0",
